tests/delete/attribute_table_none/test.stderr
error: A struct must be annotated with `#[crud_table("table_name")]` to specify the database table
 --> tests/delete/attribute_table_none/test.rs:4:1
  |
4 | / struct Test {
5 | |     #[crud_id]
6 | |     id: i64,
7 | |     name: String,
8 | | }
  | |_^

error[E0599]: no function or associated item named `delete` found for struct `Test` in the current scope
  --> tests/delete/attribute_table_none/test.rs:12:25
   |
4  | struct Test {
   | ----------- function or associated item `delete` not found for this struct
...
12 |     let _result = Test::delete(1).await;
   |                         ^^^^^^ function or associated item not found in `Test`
